Update email address and Google analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Matthew Odette - Thoughts on front end development
+title: Matthew Odette - Thoughts on front end development an other ramblings
 ---
 
 <ul id="posts" class="twelve columns offset-by-four">
