hide old posts and add some new links

--- a/_posts/2010-04-28-what-I-wish-a-ruby-programmer-had-told-me-one-year-ago.html
+++ b/_posts/2010-04-28-what-I-wish-a-ruby-programmer-had-told-me-one-year-ago.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: What I wish a Ruby programmer had told me one year ago
+hidden: true
 ---
 
 <strong>Warning:</strong> Biased content follows.
