--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 ---
 layout: default
-title: Sirupsen and his codeabouts
+title: Simon Eskildsen - Sirupsen
 ---
 
 <ul id="posts" class="twelve columns offset-by-four">
   {% for post in site.posts %}
-    <li>
-      {% if post.external_url %}
-        <a class="nine columns" href="{{ post.external_url }}">{{ post.title }}</a>
-      {% else %}
-        <a class="nine columns" href="{{ post.url }}">{{ post.title }}</a>
-      {% endif %}
+    {% unless post.hidden %}
+      <li>
+        {% if post.external_url %}
+          <a class="nine columns" href="{{ post.external_url }}">{{ post.title }}</a>
+        {% else %}
+          <a class="nine columns" href="{{ post.url }}">{{ post.title }}</a>
+        {% endif %}
 
-      <span class="two columns">{{ post.date | date: "%b %Y" }}</span>
-    </li>
+        <span class="two columns">{{ post.date | date: "%b %Y" }}</span>
+      </li>
+    {% endunless %}
   {% endfor %}
 </ul>
