--- a/_posts/2009-09-12-starting-with-git.html
+++ b/_posts/2009-09-12-starting-with-git.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Starting with Git!
+hidden: true
 ---
 
 <p>The purpose of this<strong> guide</strong> or <strong>tutorial</strong> is to give a brief overview of how to work with Git, even for people who've <strong>never</strong> had any experience with version controlling. This guide anticipates that you:</p>
