--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Matthew Odette - Thoughts on front end development an other ramblings
   {% for post in site.posts %}
     <li>
       <a class="nine columns" href="{{ post.url }}">{{ post.title }}</a>
-      <span class="two columns">{{ post.date | date: "%b %Y" }}</span>
+      <span class="two columns"> </span>
     </li>
   {% endfor %}
 </ul>
