--- a/content/napkin/_index.html
+++ b/content/napkin/_index.html
@@ -6,8 +6,13 @@ list: napkin
 <p><a href="https://github.com/sirupsen/napkin-math#numbers"><img style="margin-left: 0;" src="/static/images/napkin-header.png" alt=""></a></p>
 
 <p>Subscribe for a monthly "computer napkin problem" where you use
-first-principle thinking to arrive at an expected performance of a system!
-Examples from real problems:
+first-principle thinking to arrive at expectations about systems in a jiffy
+without writing any code!
+Examples from past editions:
+
+<blockquote> What is the expected throughput of a single-threaded, in-memory
+data-store like Redis?
+<a href="/napkin/problem-4/">Problem 4</a></blockquote>
 
 <blockquote>How much do you expect to pay for the storage of logs cost for a standard, monolithic 100,000 RPS web application? -- <a href="/napkin/problem-1/">Problem 1</a></blockquote></blockquote>
 
