--- a/content/napkin/_index.html
+++ b/content/napkin/_index.html
@@ -31,6 +31,7 @@ primer on the topic.</p>
 <form
   action="https://buttondown.email/api/emails/embed-subscribe/computer-napkins"
   method="post"
+  id="subscribe"
   target="popupwindow"
   onsubmit="window.open('https://buttondown.email/computer-napkins', 'popupwindow')"
   class="embeddable-buttondown-form"
