--- a/content/napkin/_index.html
+++ b/content/napkin/_index.html
@@ -4,7 +4,8 @@ title: Napkin Math
 ---
 
 
-<p><a href="https://github.com/sirupsen/napkin-math#numbers"><img style="margin-left: 0;" src="/static/images/napkin-header.png/" alt=""></a></p>
+<p><a href="https://github.com/sirupsen/napkin-math#numbers"><img
+  style="margin-left: 0;" src="/static/images/napkin-header.png" alt=""></a></p>
 
 <p>Subscribe for a monthly "computer napkin problem" where you use
 first-principle thinking to arrive at expectations about systems in a jiffy
