--- a/content/books/never-split-the-difference.html
+++ b/content/books/never-split-the-difference.html
@@ -1,6 +1,6 @@
 ---
 date: "2016-08-08 16:47:06 -0700"
-title: "🥇 5/5 - Never Split the Difference: Negotiating As If Your Life Depended On It"
+title: "🥇 5/5 - Never Split the Difference"
 book_author: "Chris Voss"
 book_publication_year: "2016"
 book_goodreads_link: "https://www.goodreads.com/book/show/26156469-never-split-the-difference"
