--- a/content/books/the-great-influenza.html
+++ b/content/books/the-great-influenza.html
@@ -1,9 +1,9 @@
 ---
 date: "2020-03-07 06:24:26 -0800"
-title: "❓ ?/5 - The Great Influenza: The Story of the Deadliest Pandemic in History"
+title: "🤷 2/5 - The Great Influenza: The Story of the Deadliest Pandemic in History"
 book_author: "John M. Barry"
 book_publication_year: "2005"
 book_goodreads_link: "https://www.goodreads.com/book/show/29036.The_Great_Influenza"
 ---
 
-<p></p>
+<p>Disappointing. Little that provides useful perspective for today's pandemic. The book doesn't know what it wants. Is it about the Spanish Flu? Is it a book about scientific history? Specifically America's history of medical science 1880 - 1950? Book's a mess. There's wide-spread controversy of where the virus started, but Berry's sure he's got it right. How can that be?!<br /><br />There's some absolutely horrific, vivid descriptions of various cities where corpses are stacked with only a toe-tag to identify, completely overrun orphanages, but it's so difficult to get a sense of what the impact was, and where. There's no diagrams or graphs to help conceptualize, digest, and remember information. At times I am dying for him to go into the virology, but when it gets remotely deep, he zooms back out. There's some interesting points scattered, such as how viruses will regress to the mean, which H1N1 (the strain that caused the 1918 pandemic) did -- this brings some hope for COVID19 to possibly do the same (mutations aren't only bad, they can be a good thing too).<br /><br />There's almost nothing in this book, if read by a policy-maker, that help them learn properly from the previous crisis. E.g. we've seen in media examples floating around comparing St. Louis and Philly's response, but that's not mentioned in this book. In light of recent events, that's such a disappointment. <br /><br />I regret finishing this. Don't read this.</p>
