--- a/content/napkin/_index.html
+++ b/content/napkin/_index.html
@@ -22,7 +22,7 @@ data-store like Redis?
 database pages with a 80% page cache hit rate to be? -- <a
 href="/napkin/problem-2/">Problem 2</a></blockquote>
 
-With the reference <a href="https://github.com/sirupsen/napkin-math#numbers">napkin math reference numbers</a>
+With the <a href="https://github.com/sirupsen/napkin-math#numbers">napkin math reference numbers</a>
 in hand, pen, paper, and some reasonable assumptions (such as average log size
 or database record size) you should be able to arrive at an approximate answer.
 The idea is that a monthly cadence should be about enough to keep the skill sharp.
