--- a/content/books/grit.html
+++ b/content/books/grit.html
@@ -1,6 +1,6 @@
 ---
 date: "2020-01-02 11:13:11 -0800"
-title: "Grit"
+title: "Grit: The Power of Passion and Perseverance"
 book_author: "Angela Duckworth"
 book_rating: "3"
 book_rating_icon: "🥉"
