--- a/content/napkin/_index.html
+++ b/content/napkin/_index.html
@@ -7,16 +7,17 @@ title: Napkin Math
 <p><a href="https://github.com/sirupsen/napkin-math#numbers"><img
   style="margin-left: 0;" src="/static/images/napkin-header.png" alt=""></a></p>
 
-<p>Subscribe for a monthly "computer napkin problem" where you use
-first-principle thinking to arrive at expectations about systems in a jiffy
-without writing any code!
+<p>Roughly monthly you'll receive a post with napkin math calculations where I
+employ first-principle thinking to arrive at expectations about systems. On a
+good day it'll even include some code to test these assumptions against reality!
 Examples from past editions:
 
 <blockquote> What is the expected throughput of a single-threaded, in-memory
 data-store like Redis?
 <a href="/napkin/problem-4/">Problem 4</a></blockquote>
 
-<blockquote>How much do you expect to pay for the storage of logs cost for a standard, monolithic 100,000 RPS web application? -- <a href="/napkin/problem-1/">Problem 1</a></blockquote></blockquote>
+<blockquote>Is fsyncs per seconds and transactions per second for MySQL always
+  the same?-- <a href="/napkin/problem-10-mysql-transactions-per-second/">Problem 1</a></blockquote></blockquote>
 
 <blockquote>What do you expect the response time for a query that visits 50
 database pages with a 80% page cache hit rate to be? -- <a
@@ -24,8 +25,7 @@ href="/napkin/problem-2/">Problem 2</a></blockquote>
 
 With the <a href="https://github.com/sirupsen/napkin-math#numbers">napkin math reference numbers</a>
 in hand, pen, paper, and some reasonable assumptions (such as average log size
-or database record size) you should be able to arrive at an approximate answer.
-The idea is that a monthly cadence should be about enough to keep the skill sharp.
+or database record size) we should be able to arrive at an approximate answer.
 <a href="https://www.youtube.com/watch?v=IxkSlnrRFqc">This talk</a> is the best
 primer on the topic.</p>
 
