update napkin desc again

--- a/content/napkin/_index.html
+++ b/content/napkin/_index.html
@@ -7,10 +7,10 @@ title: Napkin Math
 <p><a href="https://github.com/sirupsen/napkin-math#numbers"><img
   style="margin-left: 0;" src="/static/images/napkin-header.png" alt=""></a></p>
 
-<p>Roughly monthly you'll receive a post with napkin math calculations where I
-employ first-principle thinking to arrive at expectations about systems. On a
-good day it'll even include some code to test these assumptions against reality!
-Examples from past editions:
+<p>A newsletter about using napkin math and first-principle thinking to estimate
+systems thinking, swiftly, without writing any code! However, on a good day
+posts will include code to test whether the napkin math lines up with reality.
+If it doesn't, it's the more cause for an interesting post.</p>
 
 <blockquote> What is the expected throughput of a single-threaded, in-memory
 data-store like Redis?
