--- a/content/napkin/_index.html
+++ b/content/napkin/_index.html
@@ -8,22 +8,22 @@ title: Napkin Math
   style="margin-left: 0;" src="/static/images/napkin-header.png" alt=""></a></p>
 
 <p>A newsletter about using napkin math and first-principle thinking to estimate
-systems thinking, swiftly, without writing any code! However, on a good day
+systems performance -- fast, and without writing any code! However, on a good day
 posts will include code to test whether the napkin math lines up with reality.
 If it doesn't, it's the more cause for an interesting post.</p>
 
 <blockquote> What is the expected throughput of a single-threaded, in-memory
-data-store like Redis?
+data-store like Redis? --
 <a href="/napkin/problem-4/">Problem 4</a></blockquote>
 
 <blockquote>Is fsyncs per seconds and transactions per second for MySQL always
-  the same?-- <a href="/napkin/problem-10-mysql-transactions-per-second/">Problem 1</a></blockquote></blockquote>
+  the same? -- <a href="/napkin/problem-10-mysql-transactions-per-second/">Problem 1</a></blockquote></blockquote>
 
 <blockquote>What do you expect the response time for a query that visits 50
 database pages with a 80% page cache hit rate to be? -- <a
 href="/napkin/problem-2/">Problem 2</a></blockquote>
 
-With the <a href="https://github.com/sirupsen/napkin-math#numbers">napkin math reference numbers</a>
+<p>With the <a href="https://github.com/sirupsen/napkin-math#numbers">napkin math reference numbers</a>
 in hand, pen, paper, and some reasonable assumptions (such as average log size
 or database record size) we should be able to arrive at an approximate answer.
 <a href="https://www.youtube.com/watch?v=IxkSlnrRFqc">This talk</a> is the best
