--- a/content/napkin/_index.html
+++ b/content/napkin/_index.html
@@ -17,7 +17,8 @@ data-store like Redis? --
 <a href="/napkin/problem-4/">Problem 4</a></blockquote>
 
 <blockquote>Is fsyncs per seconds and transactions per second for MySQL always
-  the same? -- <a href="/napkin/problem-10-mysql-transactions-per-second/">Problem 1</a></blockquote></blockquote>
+  the same? -- <a
+    href="/napkin/problem-10-mysql-transactions-per-second/">Problem 10</a></blockquote></blockquote>
 
 <blockquote>What do you expect the response time for a query that visits 50
 database pages with a 80% page cache hit rate to be? -- <a
